fix with for project page on mobile

--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -18,6 +18,7 @@
 }
 
 main {
+  width: 100%;
   margin-top: 175px;
   max-width: 1440px;
   margin: auto;
