--- a/src/styles/sass/projects.scss
+++ b/src/styles/sass/projects.scss
@@ -6,6 +6,7 @@
     }
 }
 .card-wrrapper {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
